# catch-all-email

./: Cargo.toml  flake.nix
src/: main.rs
