[package]
name = "catch-all-email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
md5 = "0.7.0"
wl-clipboard-rs = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
